2010-01-04  Nick Gasson  <nick@nickg.me.uk>

	* src/xcowsay.c (main): Add --bubble-at option to change
	relative location of speech bubble.
	* src/display_cow.c (display_cow): Use bubble_x and bubble_y
	config variables to alter relative location of bubble.

	* src/config_file.c (parse_config_file): Allow the config file
	to be placed in $XDG_CONFIG_HOME/xcowsayrc as well as
	$HOME/.xcowsayrc.

	* src/xcowsay.c (main): Add --config option to specify and
	additional config file to parse.
	* src/config_file.c (config_file_name): Support parsing the
	additional config file.

2010-01-03  Nick Gasson  <nick@nickg.me.uk>

	* src/xcowsay.c (main): Add --at option to specify cow location
	on screen and correspoding at_x and at_y config variables.
	(parse_position_option): New function to parse options specified
	as X,Y pairs.
	* src/display_cow.c (display_cow): Now recognises the at_x and
	at_y config variables to force cow to appear at a particular
	position.

2010-01-02  Nick Gasson  <nick@nickg.me.uk>

	* src/display_cow.c (display_cow): Fix splicing of cow across
	multiple monitors.  Now picks a random monitor and then a random
	location within that monitor.
	* src/xcowsay.c (main): Add --monitor option to specify a
	particular montior for the cow to appear on.

2008-06-04  Nick Gasson  <nick@nickg.me.uk>

	* src/display_cow.c (display_cow): Fix bug where cow would
	appear off the side of the screen and fix a floating point
	exception in rare circumstances.

2008-05-23  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add po.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add config.rpath, m4/ChangeLog.
	* configure.ac (AC_OUTPUT): Add po/Makefile.in.
